--- a/thingsd/thingsctl.8
+++ b/thingsd/thingsctl.8
@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (c) 2016-2019 Tracey Emery <tracey@traceyemery.net>
+.\" Copyright (c) 2016 Tracey Emery <tracey@traceyemery.net>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 
-.Dd $Mdocdate: January 26 2019 $
+.Dd $Mdocdate: January 26 2016 $
 .Dt THINGSCTL 1
 .Os
 .Sh NAME
@@ -24,7 +24,7 @@
 .Nm thingsctl
 .Op Fl sv
 .Op Fl d Ar host : Ns Ar port
-.Op Fl f Ar thing
+.Op Fl f Ar device
 .Op Ar command args ...
 .Sh DESCRIPTION
 The
