Block all calls and only show packets from one thing at a time.

--- a/thingsctl/thingsctl.8
+++ b/thingsctl/thingsctl.8
@@ -55,6 +55,7 @@ This will not list non-persistent things.
 Disconnect a subscribed client from thingsd by client name.
 .It Cm show Ar string
 View string version of a thing's packets by its name.
+Showing packets blocks all other calls.
 A thing could be sending binary data!
 Use at your own risk.
 .El
